--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -59,7 +59,8 @@
         "enter_address":"Enter address",
         "gas_price":"Gas price",
         "generate":"Generate transaction",
-        "history":"History",
+        "history":"Transactions history",
+        "no_history":"No history",
         "received":"Received",
         "sent":"Sent",
         "payment_to":"Payment to",
