--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -5,6 +5,7 @@
         "login_text":"Enter you email and password to login.",
         "email":"Email",
         "password":"Password",
+        "new_password":"New password",
         "forgot_password":"Forgot your password?",
         "login_button":"LOGIN",
         "check_email":"Please check your email to access your secure link.",
@@ -15,33 +16,38 @@
         "by_registering":"By registering you agree to our",
         "terms_and_conditions":"Terms & Conditions",
         "create_password":"Create Password",
+        "create_new_password":"Create new password",
         "enter_password_text":"Enter the password you would like to use with your wallet.",
         "save":"Save",
+        "submit":"Submit",
         "pass_do_not_match":"Passwords do not match",
         "pass_text":"Use 8 or more characters with a mix of uppercase and lowercase letters, numbers and symbols.",
         "confirm_pass":"Confirm password",
+        "confirm_new_pass":"Confirm new password",
         "reset_pass":"Reset Password",
         "enter_recovery":"Enter your Recovery phrase to create new password.",
-        "reset":"Reset",
-        "invalid_rec":"Invalid recovery phrase",
+        "reset":"Next",
+        "invalid_rec":"Incorrect recovery phrase",
         "invalid_phrase":"Something went wrong. Make sure you entered the words from recovery phrase in correct order."
     },
     "wallet": {
         "recovery_phrase":"Recovery Phrase",
         "only_way":"This is only way to reset your password!",
-        "cant_recovered":"Your PBG tokens cant’s be recovered without it",
+        "cant_recovered":"Your tokens cant’s be recovered without it",
         "strongly_recomended":"It is strongly recommended that you store backups of your recovery phrase in physically separate, offline environment. Do not share it with anyone else.",
         "ok":"Ok",
         "later":"Later",
         "your_address":"Your Address",
         "backup":"Backup Recovery Phrase",
+        "backup_1":"backup",
         "please_enter":"Please enter the words from your Recovery Phrase in the required order.",
         "word":"Word",
-        "finish":"Finish",
+        "finish":"Done",
         "go_copy":"Back",
         "security":"Security",
         "have_to_backup":"You have to backup your recovery phrase. It is strongly recommended to store the backup copies in physically separate, offline environment. If someone were to find your recovery phrase they could access your wallet.",
         "email" :"Email",
+        "have_to_backup_pvk_and_phrase":"You have to backup your private key and recovery phrase. It is strongly recommended to store the backup copies in physically separate, offline environment. If someone were to find your password, private key or recovery phrase they could access your wallet.",
         "address":"Address",
         "private_key":"Private Key",
         "pvk_text":"your private key could be here but it wouldn't make sense.",
@@ -56,9 +62,9 @@
         "transfer":"Transfer",
         "send":"Send",
         "to_the_account":"to the recipient's address.",
-        "enter_address":"Enter address",
+        "enter_address":"0x65c981c6d53c5e064e29d253aec3ca9ea8f21af3",
         "gas_price":"Gas price",
-        "generate":"Generate transaction",
+        "generate":"Send",
         "history":"Transactions history",
         "no_history":"No transactions",
         "received":"Received",
@@ -79,8 +85,9 @@
         "no":"No",
         "enter_pass_pvk":"Enter your password to backup your Private Key.",
         "enter_pass_pvk_see":"Enter your password to see your Private Key.",
-        "have_to_backup_pvk":"You have to backup your recovery phrase. It is strongly recommended to store the backup copies in physically separate, offline environment. If someone were to find your recovery phrase they could access your wallet.",
+        "have_to_backup_pvk":"You have to backup your private key. It is strongly recommended to store the backup copies in physically separate, offline environment. If someone were to find your private key they could access your wallet.",
         "backed_up":"Backed up",
+        "only_way_first":"You have to backup your recovery phrase. It is strongly recommended to store the backup copies in physically separate, offline environment. If someone were to find your recovery phrase they could access your wallet. Your recovery phrase is the only way to reset your web wallet password.",
         "confirm":"Confirm",
         "enter_to_make_transaction":"Enter your password to make transaction.",
         "review_confirm":"Review and confirm your transfer",
@@ -95,14 +102,14 @@
         "balance":"balance"
     },
     "error": {
-            "invalid_email_or_pass":"Invalid email or password",
-            "invalid_email":"Invalid email",
-            "invalid_password":"Invalid password",
+            "invalid_email_or_pass":"Incorrect email or password",
+            "invalid_email":"Incorrect email",
+            "invalid_password":"Incorrect password",
             "system_error":"It seems you already have a EVE Wallet, please try to login.",
-            "ins_invalid_amount_error":"Insufficient Amount",
-            "invalid_address":"Invalid address",
+            "ins_invalid_amount_error":"Insufficient funds",
+            "invalid_address":"Incorrect address",
             "invalid_gas":"Insufficient ETH",
-            "account_already_exist":"Account already exist"
+            "account_already_exist":""
     },
     "core": {
        
