--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -109,7 +109,7 @@
             "ins_invalid_amount_error":"Insufficient funds",
             "invalid_address":"Incorrect address",
             "invalid_gas":"Insufficient ETH",
-            "account_already_exist":""
+            "account_already_exist":"It seems you already have a EVE Wallet, please try to login."
     },
     "core": {
        
