--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -102,6 +102,7 @@
         "copied":"Copied",
         "see_more":"See more",
         "balance":"balance",
+        "ba_lance":"Balance",
         "medium": "Average",
         "fast": "Fast",
         "low": "Safe Low"
